<resources>
    <string name="app_name">Learn Code</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="quizo">QUIZO</string>
    <string name="todo">TODO</string>
    <string name="create_an_account">Sign Up</string>
    <string name="submit">SUBMIT</string>
    <string name="by_signing_up_you_agree_to_our_privacy_policy_and_terms_and_condition">By signing up you agree to our privacy policy and terms and condition</string>
    <string name="full_name">Full Name</string>

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="refer_code">Refer Code</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="welcome_again">Welcome Again</string>
    <string name="forgot_my_password">Forgot My Password?</string>
    <string name="all_quizzes">All Quizzes</string>
    <string name="play_quiz">- Play Quiz</string>
    <string name="collect_coin">- Collect Coin</string>
    <string name="instruction">Instruction</string>
    <string name="home">Home</string>
    <string name="homes">Home</string>
    <string name="profile">Profile</string>
    <string name="quiz">Quiz</string>
    <string name="leadBoard">Leaderboard</string>
    <string name="todos">TODO</string>
    <string name="choose_categorys">Choose Category</string>
    <string name="category">CATEGORY</string>
    <string name="_30">30</string>
    <string name="_1_10"> 1/10</string>
    <string name="next_question">Next Question</string>
    <string name="who_invented_java_programming">.</string>
    <string name="guido_van_rossum">.</string>
    <string name="james_gosling">.</string>
    <string name="dennis_ritchie">.</string>
    <string name="bjarne_stroustrup">.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_score">YOUR SCORE</string>
    <string name="_8_10">8 / 10</string>
    <string name="earned_coins">EARNED COINS</string>
    <string name="_500">500</string>
    <string name="todoimg">TODO</string>
    <string name="share">SHARE</string>
    <string name="researt">RESTART</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_coins">Current Coins</string>
    <string name="_300">300</string>
    <string name="withdraw_now">WITHDRAW NOW</string>
    <string name="enter_phonepe_upi_id">Enter PhonePe Upi Id</string>
    <string name="_1000_coins_required_to_withdraw">1000 coins required to withdraw(1000 coins = ₹10)</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="todoquitbtn">TODO</string>
    <string name="todosssss">TODO</string>
    <string name="back">Back</string>
    <string name="Result">Result</string>
    <string name="keep_quizzing">Keep Quizzing.</string>
    <string name="successfully_solve_this_quizes_keep_quizzing">Successfully solve this Quizes.Keep Quizzing?</string>
    <string name="no">NO</string>
    <string name="todosp">TODO</string>
    <string name="todoooo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="are_you_quit_this_quiz">Are you quit this quiz?</string>
    <string name="_1_question">Loading Question....</string>
    <string name="load_answer">load answer.....</string>
    <string name="questionNum">1)</string>
    <string name="switch_to_dark">Switch to Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="category_part_name">CategoryPartName</string>
    <string name="question_number">questionNumber</string>
    <string name="title_activity_category_part">CategoryPartActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="category_name">Category Name</string>
    <string name="title_activity_button_navigation">buttonNavigation</string>
    <string name="explore">Explore</string>
    <string name="quitBtn">TODO</string>
    <string name="questionImg">TODO</string>
    <string name="user_name">User_Name</string>
    <string name="email_id">Email_Id</string>
    <string name="header_image">Header Image</string>
    <string name="learnCode_pro">LearnCode Pro</string>
    <string name="spin_amp_win"><![CDATA[Spin & Win]]></string>
    <string name="leaderboard">Leaderboard</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="setting">Setting</string>
    <string name="sign_out">Sign Out</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="quiz_scores">Quiz Scores</string>
    <string name="wallet">Wallet</string>
    <string name="ProfileImage">TODO</string>
</resources>