<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_29sdp"
                android:text="@string/Result"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:drawablePadding="@dimen/_12sdp"
                android:gravity="left"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_bold"
                app:drawableLeftCompat="@drawable/back_icon">

            </TextView>
        </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:background="@drawable/trophy"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:contentDescription="@string/todoimg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/congratulations"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/your_score"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/montserrat_alternates_bold"
                    android:gravity="center"
                    android:text="@string/_8_10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/earned_coins"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/earnedCoined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/_500"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/coin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:elevation="@dimen/_5sdp"
                    android:gravity="center"
                    android:baselineAligned="false">


                    <TextView
                        android:id="@+id/shareBtn"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_8sdp"
                        android:background="@drawable/button_1"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:padding="@dimen/_12sdp"
                        android:textSize="@dimen/_12sdp"
                        app:drawableLeftCompat="@drawable/share" />

                    <TextView
                        android:id="@+id/restartBtn"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_8sdp"
                        android:background="@drawable/button_2"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:padding="@dimen/_12sdp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/researt"
                        android:drawableLeft="@drawable/reset"
                        />




                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</RelativeLayout>