<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="50dp">
                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:background="@drawable/app_icon"
                    android:contentDescription="@string/todo">
                </ImageView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="20dp"
                android:background="@color/white"
                android:backgroundTint="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_an_account"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPurple">

                    </TextView>
                    <View
                        android:layout_width="100dp"
                        android:layout_height="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:background="@drawable/background">

                    </View>

                    <EditText
                        android:id="@+id/nameBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_box"
                        android:drawableStart="@drawable/user"
                        android:drawableTint="@color/colorPurple"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/emailBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_box"
                        android:drawableTint="@color/colorPurple"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/passwordBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_box"
                        android:drawableTint="@color/colorPurple"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/referBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/text_box"
                        android:drawableStart="@drawable/refer"
                        android:drawableTint="@color/colorPurple"
                        android:drawablePadding="15dp"
                        android:ems="10"
                        android:hint="@string/refer_code"
                        android:inputType="textPersonName"
                        android:padding="10dp" />
                    <TextView
                        android:id="@+id/submitBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:background="@drawable/submit_btn"
                        android:text="@string/sign_up"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:background="@drawable/login_btn1"
                        android:text="@string/already_have_an_account"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/by_signing_up_you_agree_to_our_privacy_policy_and_terms_and_condition">

                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>



</LinearLayout>