<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WalletFragment"
    android:orientation="vertical"
    android:background="@color/grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:backgroundTint="@color/colorPurple"
                android:padding="@dimen/_14sdp"
                app:cardCornerRadius="@dimen/_17sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/current_coins"
                        android:textSize="@dimen/_15sdp"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/currentCoins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/_300"
                        android:textSize="@dimen/_30sdp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/montserrat_bold"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/_1000_coins_required_to_withdraw"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/white"
                        tools:ignore="HardcodedText" />

                </LinearLayout>





            </androidx.cardview.widget.CardView>
            <EditText
                android:id="@+id/upiIdBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_box"
                android:padding="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:drawableStart="@drawable/phonepe_icon"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/enter_phonepe_upi_id"/>
            <TextView
                android:id="@+id/sendRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangular_rounded_1box"
                android:padding="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:text="@string/withdraw_now"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                />



        </LinearLayout>
    </ScrollView>
</LinearLayout>