<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:orientation="vertical"
    style="@style/mainBg">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:cardCornerRadius="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp">
        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:background="@drawable/profile_icon"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>
    <EditText

        android:id="@+id/emailBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box"
        android:padding="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:drawableTint="@color/colorPurple"
        android:drawableStart="@drawable/email"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/email_address"/>
    <EditText

        android:id="@+id/nameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box"
        android:padding="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:drawableTint="@color/colorPurple"
        android:drawableStart="@drawable/user"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/full_name"/>
    <EditText

        android:id="@+id/passBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box"
        android:padding="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:drawableTint="@color/colorPurple"
        android:drawableStart="@drawable/password"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/password"/>

    <TextView
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       style="@style/nextBtn"
        android:padding="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:text="@string/update_profile"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        />



</LinearLayout>